--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "sequelize": "^6.7.0",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.11"
