--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "express-fileupload": "^1.2.1",
     "mongoose": "^5.13.2",
     "sequelize": "^6.7.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.11"
