--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gradient-progress": "^1.0.3",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.1.9",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
